# ahead

./: .env.example  .gitignore  Dockerfile  README.md  SPEC.md  pyproject.toml  run_backtest.py  run_demo_feed.py
frontend/: index.html
frontend/src/: App.css  App.jsx  index.css
src/: api.py  main.py  mcp_client.py  mcp_server.py
src/agents/: coach.py  orchestrator.py  specialists.py
src/data/: generator.py
src/forecaster/: engine.py
src/skills/: coach_skill.md  coach_skill_analyst.md  coach_skill_gentle.md  coach_skill_strict.md
src/utils/: pii_redactor.py
