[project]
name = "ahead"
version = "0.1.0"
description = "A personal financial early-warning agent catching the slow bleed before it becomes debt."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=0.1.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "mcp>=0.1.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

